--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stackrole/gatsby-starter-foundation",
   "description": "A starter to launch your blazing fast personal website and a blog, Built with Gatsby and Netlify CMS. Made with ❤ by Stackrole",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": "Stackrole <stackrole@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -22,35 +22,37 @@
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "@mdx-js/react": "^2.2.1",
     "@theme-ui/color": "^0.6.0",
-    "gatsby": "^4.7.1",
-    "gatsby-plugin-google-analytics": "^4.7.0",
-    "gatsby-plugin-image": "^2.7.0",
-    "gatsby-plugin-manifest": "^4.7.0",
-    "gatsby-plugin-netlify-cms": "^6.7.0",
+    "@theme-ui/mdx": "^0.15.4",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-google-analytics": "5.3.0",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-netlify-cms": "^7.3.0",
     "gatsby-plugin-netlify-cms-paths": "^1.3.0",
-    "gatsby-plugin-offline": "^5.7.0",
-    "gatsby-plugin-react-helmet": "^5.7.0",
-    "gatsby-plugin-sass": "^5.7.0",
-    "gatsby-plugin-sharp": "^4.7.0",
-    "gatsby-plugin-sitemap": "^5.7.0",
-    "gatsby-plugin-theme-ui": "^0.6.2",
-    "gatsby-remark-images": "^6.7.0",
-    "gatsby-remark-prismjs": "^6.7.0",
-    "gatsby-remark-responsive-iframe": "^5.7.0",
-    "gatsby-source-filesystem": "^4.7.0",
-    "gatsby-transformer-remark": "^5.7.0",
-    "gatsby-transformer-sharp": "^4.7.0",
-    "netlify-cms-app": "2.14.32",
-    "prismjs": "^1.27.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "gatsby-plugin-offline": "^6.3.1",
+    "gatsby-plugin-react-helmet": "^6.3.0",
+    "gatsby-plugin-sass": "^6.3.1",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-theme-ui": "^0.15.4",
+    "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-remark-responsive-iframe": "^6.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2",
+    "gatsby-transformer-sharp": "^5.3.1",
+    "netlify-cms-app": "2.15.72",
+    "prismjs": "^1.29.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0",
-    "sass": "^1.49.7",
-    "theme-ui": "^0.6.2"
+    "react-icons": "^4.7.1",
+    "sass": "^1.57.1",
+    "theme-ui": "^0.15.4"
   },
   "devDependencies": {
-    "gatsby-plugin-netlify": "^4.1.0"
+    "gatsby-plugin-netlify": "^5.1.0"
   }
 }
